--- a/ui/static/css/style2.css
+++ b/ui/static/css/style2.css
@@ -462,6 +462,7 @@ tr:nth-child(odd) {
 footer {
   /* haut | droit | bas | gauche */
   margin: 5px 5px 5px 5px;
+  text-align: center;
 }
 #main {
   width: 100%;
