--- a/ui/templates/home.gohtml
+++ b/ui/templates/home.gohtml
@@ -2,7 +2,7 @@
 {{define "main"}}
     <h2>Derniers messages</h2>
     {{if .Snippets}}
-        <table>
+        <table class= "table">
             <tr>
                 <th>N°</th>
                 <th>Tître</th>
