new file:   126_utilisation_api_greenlight.bmp 	new file:   126_utilisation_api_greenlight.graphml 	new file:   126_utilisation_api_greenlight_2.bmp 	new file:   126_utilisation_api_greenlight_2.graphml 	modified:   cmd/greenlight.go 	modified:   cmd/handlers.go 	modified:   cmd/helpers.go 	modified:   cmd/main.go 	modified:   cmd/middleware.go 	modified:   cmd/routes.go 	modified:   internal/models/base.go 	modified:   internal/models/models.go 	modified:   ui/templates/home.gohtml 	modified:   ui/templates/index.gohtml 	modified:   ui/templates/partials/nav.gohtml

--- a/ui/templates/home.gohtml
+++ b/ui/templates/home.gohtml
@@ -1,5 +1,8 @@
 {{define "title"}}Home{{end}}
 {{define "main"}}
+    <div class="part2">
+          <h1  >{{.Message}}</h1>
+    </div>  
     <h2>Derniers messages</h2>
     {{if .Snippets}}
         <table class= "table">
