--- a/ui/templates/partials/nav.gohtml
+++ b/ui/templates/partials/nav.gohtml
@@ -17,6 +17,7 @@
                             {{if .IsAuthenticated}}
                             <li><a href='/movies/connectuserapi'>S'inscrire sur l'API films</a></li>
                             <li><a href='/movies/authenticateuserapi'>Se connecter à l'API films</a></li>
+                            <li><a href='/movies/refreshtokensuserapi'>Utiliser le refresh Token API films</a></li>
                             <li><a href='/movie/view'>Affiche un film</a></li>
                             <li><a href='/movies/view' >Liste des Films</a></li>
                             {{end}}
