modified:   cmd/context.go 	modified:   cmd/handlers.go 	modified:   cmd/main.go 	modified:   cmd/middleware.go 	modified:   ui/templates/home.gohtml 	modified:   ui/templates/loginapi.gohtml 	modified:   ui/templates/partials/nav.gohtml 	modified:   ui/templates/signupapi.gohtml

--- a/ui/templates/home.gohtml
+++ b/ui/templates/home.gohtml
@@ -1,10 +1,12 @@
 {{define "title"}}Home{{end}}
 {{define "main"}}
-    <div class="part2">
-          <h1  >{{.Message}}</h1>
-    </div>  
-    <h2>Derniers messages</h2>
+    {{if .Message}}
+     <div class="part2">
+          <h3  >{{.Message}}</h3>
+    </div> 
+    {{end}}
     {{if .Snippets}}
+    <h2>Derniers messages</h2>
         <table class= "table">
             <tr>
                 <th>N°</th>
@@ -22,7 +24,5 @@
                 </tr>
             {{end}}
         </table>
-    {{else}}
-        <p>There's nothing to see here... yet!</p>
     {{end}}
 {{end}}
