renamed:    cmd/__debug_bin3946150004 -> cmd/__debug_bin1698477165 	modified:   cmd/greenlight.go 	modified:   cmd/handlers.go 	modified:   cmd/middleware.go 	modified:   cmd/routes.go 	modified:   internal/models/models.go 	modified:   ui/templates/loginapi.gohtml 	modified:   ui/templates/saisietokenapi.gohtml 	modified:   ui/templates/signupapi.gohtml

--- a/ui/templates/loginapi.gohtml
+++ b/ui/templates/loginapi.gohtml
@@ -7,6 +7,11 @@
         {{range .Form.NonFieldErrors}}
             <div class='error'>{{.}}</div>
         {{end}}
+        {{if .Message}}
+            <div class="part2">
+                <h3  >{{.Message}}</h3>
+            </div> 
+        {{end}}
         <div>
             <label>Name:</label>
             {{with .Form.FieldErrors.email}}
