--- a/ui/templates/partials/nav.gohtml
+++ b/ui/templates/partials/nav.gohtml
@@ -36,12 +36,12 @@
                     <!-- Include the CSRF token -->
                     <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
                     <!--<button>Logout</button>-->
-                <a href='/user/logout'>Logout</a>
+                <li><a href='/user/logout'>Logout</a></li>
                 <!--</form>-->
             {{else}}
 
-                <a href='/user/signup'>S'inscrire</a>
-                <a href='/user/login'>Se connecter</a>
+                <li ><a href='/user/signup'>S'inscrire</a></li>
+                <li ><a href='/user/login'>Se connecter</a></li>
 
             {{end}}
                 {{- if .IsAuthenticated }}
